# interact_evoagent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_INTRO.md  README.md  README_INTERACTIVE.md  README_zh.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: CONTRACT.md  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: __init__.py  test_api.py  test_orchestrator.py  test_storage.py
benchmarks/memory/: tasks.jsonl
benchmarks/rag/: tasks.jsonl
benchmarks/tool_use/: tasks.jsonl
docs/: architecture.md  cli.md  code_agent.md  configuration.md  custom_models.md  custom_tools.md  deepseek.md  design.md  development.md  evaluation.md  faq.md  index.md  memory_system.md  multi_agent.md  observability.md  planning.md  quickstart.md  rag.md  release_readiness.md  release_readiness_update.md  release_readiness_v0.3.0.md  roadmap.md  sandbox.md  skills.md  tool_system.md  workflow.md
evoagent/: __init__.py
evoagent/cli/: chat.py  (+10 more)
examples/: basic_agent.py  code_agent.py  eval_toy.py  eval_toy_tasks.jsonl  memory_agent.py  multi_agent_debate.py  multi_agent_debugging.py  rag_agent.py  self_evolving_memory.py  skill_agent.py  tool_agent.py  workflow_agent.py
frontend/: README.md  package-lock.json  package.json
tests/: _mcp_echo_server.py  test_agent_loop.py  test_audit_regressions.py  test_checkpoint.py  test_cli.py  test_code_agent.py  test_code_agent_llm_patch.py  test_code_search.py  test_context.py  test_core_schema.py  test_cost_tracker.py  test_critic.py  test_docker_sandbox.py  test_egress.py  test_eval_harness.py  test_eval_metrics.py  test_eval_report.py  test_eval_task.py  test_executor.py  test_http_backoff.py  test_imports.py  test_logging.py  test_mcp.py  test_memory_consolidation.py  test_memory_retriever.py  test_memory_store.py  test_memory_writer.py  test_model_registry.py  test_models.py  test_multi_agent_base.py  test_multi_agent_manager.py  test_multi_agent_protocols.py  test_navigation_tools.py  test_parallel_tools.py  test_patch.py  test_permissions.py  test_planner.py  test_planner_fallback.py  test_rag_documents.py  test_rag_query_engine.py  (+26 more)
(+202 files in other folders)
